--- a/main.html
+++ b/main.html
@@ -1,1 +1,27 @@
-<h1>Hello Word</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Curriculum Vitae</title>
+</head>
+<body>
+  <header>
+    <h1>Curriculum Vitae</h1>
+  </header>
+  <section id="personal-info">
+    <!-- Informazioni personali qui -->
+  </section>
+  <section id="experience">
+    <!-- Esperienza lavorativa qui -->
+  </section>
+  <section id="education">
+    <!-- Istruzione qui -->
+  </section>
+  <section id="skills">
+    <!-- Competenze qui -->
+  </section>
+  <script src="script.js"></script>
+</body>
+</html>
