--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href=".\css\style.css">
   <title>Curriculum Vitae</title>
 </head>
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
   </header>
-  <section id="informazioni personali">
+  <section id="informazioni_personali">
   </section>
   <section id="esperienze">
   </section>
