--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 </div>
 <nav class="sidebar" id="sidebar">
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Esperienza con OpenCv</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="opencv.html">Esperienza con OpenCv</a></li>
         <li><a href="#">Esperienza con Conversioni dati PDf-Excel</a></li>
         <li><a href="#">Software per l'invio massivo di mail</a></li>
         <li><a href=".\file\curricula.pdf" download="curricula.pdf">Curricula</a></li>
