--- a/opencv.html
+++ b/opencv.html
@@ -40,6 +40,9 @@
   </header>
     <div class="name" id="name">
       <h1>I miei test con OpenCv</h1>
+      <py-config>
+        packages = ["cv2", "mediapipe"]
+      </py-config>
     <py-script src="./python/mani.py"></py-script>
   </body>
 </html>
