--- a/opencv.html
+++ b/opencv.html
@@ -41,7 +41,7 @@
     <div class="name" id="name">
       <h1>I miei test con OpenCv</h1>
       <py-config>
-        packages = ["cv2", "mediapipe"]
+        packages = ["cv2"]
       </py-config>
     <py-script src="./python/mani.py"></py-script>
   </body>
