--- a/opencv.html
+++ b/opencv.html
@@ -42,7 +42,7 @@
     <h1>I miei test con OpenCv</h1>
     <py-script src="./python/mani.py">
       <py-config>
-        packages = ["opencv-python", "mediapipe"]
+        packages = ["opencv-python"]
       </py-config>
     </py-script>
   </div>
