--- a/excv/opencv.html
+++ b/excv/opencv.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href=".\css\style.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rilevamenti con OpenCv</title>
   <link rel="stylesheet" href="https://pyscript.net/releases/2022.12.1/pyscript.css" />
   <script defer src="https://pyscript.net/releases/2022.12.1/pyscript.js"></script>
-  <title>Rilevamenti con OpenCv</title>
 </head>
 <body>
   <div class="menu-btn" id="menuBtn">
@@ -40,8 +40,12 @@
   </header>
     <div class="name" id="name">
       <h1>I miei test con OpenCv</h1>
-    <py-script src="./python/mani.py"></py-script>
-  </body>
+      <py-config>
+        packages = ["opencv-python"]
+      </py-config>
+      <py-script src="./cam.py"></py-script>
+
+    </div>
 </html>
     </div>
     <button id="back-to-top-button">
