--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="it"><head>
+<!DOCTYPE html>
+<html lang="it">
+  <head>
   <meta charset="UTF-8">
     <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png">
     <meta name="apple-mobile-web-app-title" content="CodePen">
@@ -39,7 +41,7 @@
       <li>Informazioni personali</li>
       <li>Esperienza lavorativa</li>
       <li>Competenze</li>
-      <li><a href="python.html">Progetti in Python</a></li>
+      <li><a href="python.html">Progetti in Python<i class="fab fa-python"></i></a></li>
       <li><a href="./file/alessandro_lamattina.pdf">Cv in versione pdf</a></li>
     </ul>
     <div id="nav-close"><i class="fas fa-times"></i></div>
@@ -138,8 +140,12 @@
       </div>
     </section>
     <section id="competenze"></section>
-     <section id="python"><a href="python.html"></a><h1>Aprire il menu per i progetti in Python</h1></a></section>
-     
+    <section id="python">
+      <h1> </h1>  
+      <button class="python-button" id="python-button">      
+        <div><h1>Progetti in python</h1><i class="fab fa-python" style="font-size: 40px;" ></i></div>
+      </button>
+    </section>     
   </content>
 
   <button class="back-to-top-button" id="back-to-top-button">
