--- a/python.html
+++ b/python.html
@@ -15,7 +15,6 @@
       <link rel="stylesheet" href="./css/header.css">
       <link rel="stylesheet" href="./css/high_menu.css">
       <link rel="stylesheet" href="./css/up_button.css">
-      <link rel="stylesheet" href="./css/carousel.css">
       <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-2c7831bb44f98c1391d6a4ffda0e1fd302503391ca806e7fcc7b9b87197aec26.js"></script>
       <script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeConsoleRunner-6d8bf8b4b479137260842506acbb12717dace0823c023e08b96360e60b0840d9.js"></script>
       <script src="https://cpwebassets.codepen.io/assets/editor/iframe/iframeRefreshCSS-44fe83e49b63affec96918c9af88c0d80b209a862cf87ac46bc933074b8c557d.js"></script>
@@ -37,7 +36,6 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li>Rilevamento mani</li>
-        <li>Rilevamento viso</li>
         <li>MailSender</li>
         <li>PdfToExcel</li>
       </ul>
@@ -46,8 +44,7 @@
   
     <content>
       <section id ="home" style="font-size: 40px;">Software Python</section>
-      <section id="mani"><h1>Rilevamento Mani</h1></section>
-      <section id="viso"><h1>Rilevamento Viso</h1></section>
+      <section id="mani" style="margin-top:20% "><h1>Tracciamento Mani</h1></section>
       <section id="mailsender"><h1>Invio mail prendendo 2 liste</h1></section>
       <section id="pdftoexcel"><h1>Conversione rapida di pdf di grosse dimensioni</h1></section>
     </content>
