--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
         </div>
       </div>
     </section>
-    <section id="competenze"></section>
+    <section style="flex-direction: column; margin-top:10%">
+      <div id="competenze"></div>
+      <div style="margin-top:5%">     
+        <img src="file/python.png" style="height: 400px;">
+        <img src="file/c++.png" style="height: 400px;">
+      </div> 
+    </section>
     <section id="python">
       <h1> </h1>  
       <button class="python-button" id="python-button">      
