--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@
     </section>
     <section style="flex-direction: column; margin-top:10%">
       <div id="competenze"></div>
-      <div style="margin-top:5%">     
-        <img src="file/python.png" style="height: 400px;">
-        <img src="file/c++.png" style="height: 400px;">
-      </div> 
+        <div id="cert" style="margin-top:5%">     
+          <img src="file/python.png" style="height: 400px;">
+          <img src="file/c++.png" style="height: 400px;">
+        </div> 
     </section>
     <section id="python">
       <h1> </h1>  
       <button class="python-button" id="python-button">      
-        <div><h1>Progetti in python</h1><i class="fab fa-python" style="font-size: 40px;" ></i></div>
+        <div><h1>Clicca qui per i Progetti in python</h1><i class="fab fa-python" style="font-size: 40px;" ></i></div>
       </button>
     </section>     
   </content>
