--- a/python.html
+++ b/python.html
@@ -46,16 +46,17 @@
       <section id ="home" style="font-size: 40px;">Software Python</section>
       <section id="mani" style="margin-top: 20%; flex-direction: column;">
         <h1>Tracciamento Mani</h1>
-        <div>
+        <p style=" text-align: center; margin-bottom:1%">In questo video lo script tiene traccia delle dita aperte, <br>le conta a schermo e indica qual è aperta.</p>
           <video controls width="640" height="360">
             <source src="./file/TrackerMani.mp4" type="video/mp4">
             Il tuo browser non supporta la riproduzione di video.
           </video>
+          <p style="margin-top: 5%; margin-bottom:1%"> In questo video invece in base alla posizione <br>della mano avvia una funzione diversa </p>
           <video controls width="640" height="360">
             <source src="./file/CambioVoltoConMani.mp4" type="video/mp4">
             Il tuo browser non supporta la riproduzione di video.
           </video>
-        </div>
+
       </section>
       
       <section id="mailsender" style="flex-direction: column; margin: 5%;">
