--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                     <div class="experience">
                         <div class="title" style="font-size: 20px;">Tecnico di supporto software hardware</div>
                         <div class="company" style="font-size: 15px;">Elmec</div>
-                        <div class="year" style="font-size: 10px;">2022 - Attualmente in occupazione</div>
+                        <div class="year" style="font-size: 10px;">01/09/2022 - 31/12/2023</div>
                         <div class="description" style="font-size: 12px;">
                             Sono assunto da Elmec per lavorare come specialista del supporto tecnico per Deloitte Italy spa. <br>
-                            Tra le mie mansioni ci sono:
+                            Tra le mie mansioni erano presenti:
                         </div>
                         <ul class="tasks" style="font-size: 12px; margin-left: 30px; text-align: left;">
                             <li>Manutenzione di computer;</li>
@@ -126,8 +126,39 @@
                             <li>Gestione ticket tramite ServiceNow;</li>
                             <li>Creazione di piccoli tools per agevolare il lavoro;</li>
                             <li>Riparazioni di PC;</li>
+                            <li>Assistenza rapporti con clienti;</li>
                             <li>Rapporto diretto con gli utenti;</li>
                             <li>Coordinamento di lavoro con team di altre funzioni.</li>
+                        </ul>
+                    </div>            
+                </div>
+                <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                <div class="item__3d-frame__box item__3d-frame__box--right">             </div>
+              </div>
+            </div>
+            <div class="carousel__slider__item carousel__slider__item--active" style="width: 301.25px; height: 234px;">
+              <div class="item__3d-frame" style="transform: perspective(1200px);">
+                <div class="item__3d-frame__box item__3d-frame__box--front">
+                    <div class="experience">
+                        <div class="title" style="font-size: 20px;">Information Technology System Engineer</div>
+                        <div class="company" style="font-size: 15px;">Rulex</div>
+                        <div class="year" style="font-size: 10px;">02/01/2024 - Attualmente in occupazione</div>
+                        <div class="description" style="font-size: 12px;">
+                            Alcune delle mie mansioni sono:
+                        </div>
+                        <ul class="tasks" style="font-size: 12px; margin-left: 30px; text-align: left;">
+                            <li>Gestione ciclo vitale dei pc;</li>
+                            <li>Gestione policy aziendali pc;</li>
+                            <li>Azure administrator;</li>
+                            <li>Sviluppatore script powershell;</li>
+                            <li>Sviluppatore script python;</li>
+                            <li>Gestioni policy aziendali;</li>
+                            <li>Rapporto diretto con gli utenti;</li>
+                            <li>Coordinamento di lavoro con team di altri reparti;</li>
+                            <li>Creazioni di immagini per sistemi operativi personalizzate;</li>
+                            <li>Gestione ticket attraverso Jira;</li>
+                            <li>Intune Administrator;</li>
+                            <li>Assistenza su tutto il pacchetto office.</li>
                         </ul>
                     </div>            
                 </div>
