--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="item__3d-frame" style="transform: perspective(1200px) rotateY(40deg);">
                 <div class="item__3d-frame__box item__3d-frame__box--front">
                     <div class="experience">
-                        <div class="title"><h2 style="font-size: 20px;">Tecnico di supporto software hardware</h2></div>
+                        <div class="title"><h2 style="font-size: 20px;">Tecnico di supporto software/hardware</h2></div>
                         <div class="company"><p style="font-size: 15px;">Presso: Goldbet srl</p></div>
                         <div class="year"style="font-size: 10px;">Dal 2015 al 2018</div>
                         <div class="description"style="font-size: 12px;">
@@ -86,7 +86,7 @@
               <div class="item__3d-frame" style="transform: perspective(1200px) rotateY(40deg);">
                 <div class="item__3d-frame__box item__3d-frame__box--front">
                     <div class="experience">
-                        <div class="title"><h2 style="font-size: 20px;">Tecnico di supporto software hardware</h2></div>
+                        <div class="title"><h2 style="font-size: 20px;">Tecnico di supporto software/hardware</h2></div>
                         <div class="company"><p style="font-size: 15px;">Stanleybet Malta srl</p></div>
                         <div class="year"><p style="font-size: 10px;">2018 - 2022</p></div>
                         <div class="description" style="font-size: 12px;">
@@ -112,7 +112,7 @@
               <div class="item__3d-frame" style="transform: perspective(1200px);">
                 <div class="item__3d-frame__box item__3d-frame__box--front">
                     <div class="experience">
-                        <div class="title" style="font-size: 20px;">Tecnico di supporto software hardware</div>
+                        <div class="title" style="font-size: 20px;">Tecnico di supporto software/hardware</div>
                         <div class="company" style="font-size: 15px;">Elmec</div>
                         <div class="year" style="font-size: 10px;">01/09/2022 - 31/12/2023</div>
                         <div class="description" style="font-size: 12px;">
