--- a/index.html
+++ b/index.html
@@ -171,20 +171,11 @@
       </div>
     </section>
     <section style="flex-direction: column; margin-top:25%; margin-bottom:10%">
-      <div id="competenze"></div>
-        <div id="cert" style="margin-top:5%; margin-bottom: 5px;" >     
-          <img src="file/python.png" style="height: 400px; width: 500px;">
-          <img src="file/c++.png" style="height: 400px; width: 500px;">
-          <img src="file/DevOps.png" style="height: 400px; width: 500px;"><br>
-          <img src="file/Fondamenti del Project Management Budget.png" style="height: 400px; width: 500px;">
-          <img src="file/Microsoft 365 Administration.png" style="height: 400px; width: 500px;">
-          <img src="file/Microsoft 365 Deployment.png" style="height: 400px; width: 500px;"><br>
-          <img src="file/Microsoft 365 Endpoint Administrator Associate MD102 Cert Prep 1 Deploy Windows Client.png" style="height: 400px; width: 500px;">
-          <img src="file/Microsoft Azure Fundamentals AZ900 Cert Prep 1.png" style="height: 400px; width: 500px;">
-          <img src="file/Microsoft Azure Fundamentals AZ900 Cert Prep 2.png" style="height: 400px; width: 500px;"><br>
-          <img src="file/Microsoft Entra ID for Administrators.png" style="height: 400px; width: 500px;">
-          <img src="file/Microsoft Project.png" style="height: 400px; width: 500px;">
-        </div> 
+      <div id="competenze">
+        <button class="certificate-button" id="certificate-button">      
+          <div><h1>Clicca qui per i miei certificati</h1></div>
+        </button>
+      </div>
     </section>
     <section id="python">
       <h1> </h1>  
